Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
Description
Sometimes when an exception happens in libyarn, the log information is not accurate enough. For example, below is an exception related to kerberos ticket expiration, but we can't know from this log.
2016-07-06 01:47:51.945902 BST,,,p182375,th140327040,,,,0,con4,,seg-10000,,,,,"WARNING","01000","YARN mode resource broker failed to get container report. LibYarnClient::getContainerReports, Catch the Exception:YarnIOException: Unexpected exception: when calling ApplicationCl ientProtocol::getContainers in /data1/pulse2-agent/agents/agent1/work/LIBYARN-main-opt/rhel5_x86_64/src/libyarnserver/ApplicationClientProtocol.cpp: 195",,,,,,,0,,"resourcebroker_LIBYARN_proc.c",1748,