HAWQ-970. Provide More Accurate Information When LibYARN Meets an Exception